Bump JDK version from 16 to 17 to build java-checks-test-sources using the latest