@@ -841,12 +841,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>16</release>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
-            <source>16</source>
-            <target>16</target>
+          <release>17</release>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
